# samwich-cli

./: .pre-commit-config.yaml  Justfile  README.md  action.yaml  build.sh  prepare.py  pyproject.toml  requirements.txt
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug-report.md  feature-request.md  support-request.md
.github/workflows/: publish.yaml  test-action.yaml
docs/: Justfile  README.md
docs/examples/lambda-and-layer/: README.md  pyproject.toml  requirements.txt  template.yaml
docs/examples/lambda-and-layer/.aws-sam/: build.toml
docs/examples/lambda-and-layer/app/lambda_1/: main.py  repository.py
docs/examples/lambda-and-layer/app/lambda_2/: main.py  repository.py
docs/examples/lambda-and-layer/app/lambda_3/: main.py  repository.py
docs/examples/lambda-and-layer/app_lib/: base_repository.py
samwich_cli/: cli.py  controller.py  model.py  utils.py
scripts/: entrypoint.py  samwich-cli  samwich-cli.bat  samwich-cli.ps1
tests/: conftest.py
tests/integration/: test_main.py
tests/integration/__snapshots__/: test_main.ambr
tests/unit/: conftest.py
