[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "~3.12"
annotated-types = "^0.7.0"

[tool.poetry.group.dev.dependencies]
aws-lambda-powertools = {extras = ["aws-sdk"], version = "^3.11.0"}

[build-system]
requires = ["poetry-core>=2.0.0"]
build-backend = "poetry.core.masonry.api"
